--- a/bootstraptest.html
+++ b/bootstraptest.html
@@ -365,12 +365,31 @@ function formatrowcontent(myArrayElement){
 
 <div class="navbar">
   <div class="navbar-inner">
-    <a class="brand" href="#">Mind Your Language</a>
+    <div class="container">
+    
+    <a class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+    </a>
+    <!--<a class="brand" href="#">Mind Your Language</a>-->
+    
+    <div class="nav-collapse collapse navbar-responsive-collapse">
     <ul class="nav">
-      <li><a href="#">About</a></li>
+      <li class="active"><a href="#">Home</a></li> 
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+        </ul>
+      </li>
       <li><a href="#">Services</a></li>
       <li><a href="#">Contact Us</a></li>
     </ul>
+    </div><!-- nav-collapse collapse-->
+
+  </div><!-- container -->
   </div>
 </div>
 
