--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <META NAME="Description" CONTENT="text/html; charset=UTF-8">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
+<link rel=stylesheet href="css/reset.css">
+
 <!--Bootstrap(modified)-->
 <link href="myownbootstrap/docs/assets/css/bootstrap.css" rel="stylesheet" type="text/css" />
 <link href="myownbootstrap/docs/assets/css/mystylesheet.css" rel="stylesheet" type="text/css" />
