added normalize.css and mobile viewport

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 <META NAME="Description" CONTENT="text/html; charset=UTF-8">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
+<!-- Mobile First -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js"></script>
+
+<link rel="stylesheet" type="text/css" href="css/normalize.css">
 
 <link rel="canonical" href="http://www.chinese-ime.com" />
 <link rel="stylesheet" type="text/css" href="chinese-ime/ime.css" />
