--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
 <script type="text/javascript">
 
 jQuery(document).ready(function($){
+
+  //Validation code for empty search string
+  $("#btn_search").click(function(e){
+    
+    if(!$("#input_text").val()){
+      return;
+    }
+
+    loadXMLDoc();
+
+  });
   
   /** Basically acting as a switch/toggle button*/
   $("#dropdown_action_01").click(function(e){
@@ -585,7 +596,7 @@ function formatrowcontent(myArrayElement){
   </div>
 
   <div id="btn" style="display:none">
-    <button class="btn" type="button" id="btn_search" onclick="loadXMLDoc()" >SEARCH</button> 
+    <button class="btn" type="button" id="btn_search" >SEARCH</button> 
   </div>
 
 </div>
