--- a/index.html
+++ b/index.html
@@ -573,9 +573,7 @@ function formatrowcontent(myArrayElement){
     <a class="brand" href="#">Mind Your Language</a>
     <ul class="nav">
       <li><a href="#">About</a></li>
-      <li><a href="#">Products</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="#">Settings</a></li>
     </ul>
   </div>
 </div>
