--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 <script type="text/javascript" src="js/underscore-1.3.1.min.js"></script>
 
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
+
+<link rel="stylesheet" type="text/css" href="font-awesome-4.1.0/css/font-awesome.min.css">
 
 <link rel="canonical" href="http://www.chinese-ime.com" />
 <link rel="stylesheet" type="text/css" href="chinese-ime/ime.css" />
@@ -26,8 +29,8 @@
 <link href="myownbootstrap/docs/assets/css/mystylesheet.css" rel="stylesheet" type="text/css" />
 
 <!--Bootstrap(default) -->
-<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-<link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet" type="text/css"/>
+<!--<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet" type="text/css"/> -->
 
 <!--MyBootstrap stuff --IMPORTANT!! Must load JQuery libs first before other prototype's libs -->
 <!--<script src="myownbootstrap/docs/assets/js/jquery-1.9.1.js" type="text/javascript"></script> -->
@@ -77,6 +80,8 @@ jQuery(document).ready(function($){
 
   //Validation code for empty search string
   $("#btn_search").click(function(e){
+
+    $(this).toggleClass('active');
     
     if(!$("#input_text").val()){
       return;
@@ -117,11 +122,11 @@ jQuery(document).ready(function($){
   $("#input_text.chinese").chineseInput({
       debug: true, // print debug messages
       input: {
-          initial: 'traditional', // or 'traditional'
+          initial: 'simplified', // or 'traditional'
           allowChange: true // allow transition between traditional and simplified
       },
       allowHide: true, // allow the chinese input to be switched off
-      active: true // whether or not the plugin should be active by default
+      active: false // whether or not the plugin should be active by default
   });
 
 });
@@ -374,7 +379,10 @@ function createJSONelements(value){
   </div>
 
   <div id="btn" style="display:none">
-    <button class="btn" type="button" id="btn_search" >SEARCH</button> 
+    <button class="btn has-spinner" type="button" id="btn_search" >
+      <span class="spinner"><i class="fa-spin icon-refresh"></i></span>
+      SEARCH
+    </button>
   </div>
 
 </div>
